--- a/marta-interface/src/components/TrainList.css
+++ b/marta-interface/src/components/TrainList.css
@@ -2,11 +2,11 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 60px;
-    width: 76vw;
+    width: 100%;
     top: 20%;
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
     background-color: #E2BFB3;
+    height: 60px;
 }
 
 .filterButtons {
@@ -17,15 +17,22 @@
     width: 150px;
     margin-bottom: 7px;
     padding: 0;
+    height: 30px;
 }
 
 .centDiv {
     display: flex;
     flex-direction: column;
-    width: 81vw;
+    width: 100%;
     background-color: #F7DED0;
 }
 
 .load {
+    background-color: #F7DED0;
+}
+
+.container {
+    overflow-y: auto;
+    flex-grow: 1;
     background-color: #F7DED0;
 }
